<resources>
    <string name="app_name">MyMooChat</string>
    <string name="create_new_account">Create Account</string>
    <string name="login_activity">Login Activity</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password_for_mymoochat">Password</string>
    <string name="create_account">Create Account</string>
    <string name="create_new_account1">Create new Account</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="profile">Profile Settings</string>
    <string name="all_users">All Users</string>
    <string name="sign_in">Sign In Moo</string>
    <string name="description">description</string>
    <string name="mohsin_khan">MOHSIN KHAN</string>
    <string name="picture">Picture</string>
    <string name="status">Status</string>
    <string name="name">Name</string>
    <string name="my_moomoo">My MOOMOO</string>
    <string name="this_is_my_status_hello_world">This Is my Status ! Hello World !</string>
    <string name="save">save</string>
    <string name="or">OR</string>
    <string name="type_new_status_here">Type New Status here!</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="change_status">Change Status</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="total_friends">Total Friends !</string>
    <string name="profile_status">Status !</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
