<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_green_bg"
    tools:context=".UserSettingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/profile_settings_app_bar"
                layout="@layout/app_bar_layout" />

            <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_dp"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="@dimen/_250sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_gravity="center"
        android:background="@drawable/image_border_round"
        android:src="@drawable/user_avatar" />

    <TextView
        android:id="@+id/user_setting_name"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/my_moomoo"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="@dimen/_30ssp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_setting_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/this_is_my_status_hello_world"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/_80sdp"
        android:textColor="@android:color/holo_purple"
        android:textSize="@dimen/_14ssp" />

        </LinearLayout>
    </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/setting_dp_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#4B0082"
                    android:text="@string/picture"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/setting_status_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#800080"
                    android:text="@string/status"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/setting_username_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_vertical"
                    android:layout_weight="1"
                    android:background="@android:color/holo_purple"
                    android:text="@string/name"
                    android:textColor="@color/white" />

            </LinearLayout>
</RelativeLayout>