<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".UsersProfileActivity">


    <ImageView
        android:id="@+id/user_profile_img"
        android:layout_width="match_parent"
        android:layout_height="267dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/user_avatar" />

    <TextView
        android:id="@+id/user_profile_name"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_above="@+id/user_profile_status"
        android:layout_alignParentStart="true"
        android:text="Name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/user_profile_status"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="201dp"
        android:text="@string/profile_status"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/user_profile_total_friends"
        android:layout_width="248dp"
        android:layout_height="34dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="126dp"
        android:text="@string/total_friends"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/profile_send_req_btn"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="69dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/send_friend_request"
        android:textAlignment="center"
        android:textSize="15sp" />

    <Button
        android:id="@+id/profile_decline_req_btn"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_send_req_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-69dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/decline_friend_request"
        android:textAlignment="center"
        android:textSize="15sp" />


</RelativeLayout>