<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purple_wall"
    tools:context=".RegisterActivity">

    <include layout="@layout/app_bar_layout"
        android:id="@+id/register_page_toolbar"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        app:srcCompat="@drawable/new_user" />

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="350dp"
        android:layout_height="266dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/reg_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_border"
            android:hint="@string/full_name"
            android:paddingStart="20dp"
            android:textColor="#010101"
            android:textColorHint="#808080"
            app:backgroundTint="#F8F8FF" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_border"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:textColor="#010101"
            android:textColorHint="#808080"
            app:backgroundTint="#F8F8FF" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/reg_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_border"
            android:hint="@string/password_for_mymoochat"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColor="#010101"
            android:textColorHint="#808080"
            app:backgroundTint="#F8F8FF" />

    </LinearLayout>

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_layout"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:text="@string/create_new_account1"
        android:textColor="#F8F8FF" />

</RelativeLayout>