<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purple_wall"
    tools:context=".SignInActivity">

    <include layout="@layout/app_bar_layout"
        android:id="@+id/main_page_toolbar"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="130dp"
        android:layout_above="@+id/sign_in_layout"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/login_register" />

    <LinearLayout
        android:id="@+id/sign_in_layout"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/signin_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_border"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:textColor="#010101"
            android:textColorHint="#808080"
            app:backgroundTint="#F8F8FF" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/signin_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_border"
            android:hint="@string/password_for_mymoochat"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColor="#010101"
            android:textColorHint="#808080"
            app:backgroundTint="#F8F8FF" />

    </LinearLayout>

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in_layout"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:text="@string/login"
        android:textColor="#F8F8FF" />



</RelativeLayout>